# segy-to-marimo

./: .gitignore  01_reading_segy_data.py  README.md  data_fetching.py  full_demo_marimo_monthly_community_sharing_dec_2025.py  pyproject.toml  slides.py  thewrapper.py
example-data/: data_segysak_urls.json
snippets/: thewrapper_load_seismic_cube_geometries.py  thewrapper_mapping_3dsegy_geometries.py
